--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "bulma": "^0.3.0",
+    "moment": "^2.17.1",
     "pug": "^2.0.0-beta6",
     "vue": "^2.1.0",
+    "vue-moment": "^2.0.2",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1"
   },
