--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.1.0",
     "vue-moment": "^2.0.2",
     "vue-resource": "^1.0.3",
-    "vue-router": "^2.1.1"
+    "vue-router": "^2.1.1",
+    "vue-social-sharing": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
