--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.17.1",
     "pug": "^2.0.0-beta6",
     "vue": "^2.1.0",
+    "vue-head": "^2.0.10",
     "vue-moment": "^2.0.2",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1",
