--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "bulma": "^0.3.0",
     "moment": "^2.17.1",
     "pug": "^2.0.0-beta6",
+    "v-mask": "^1.0.4",
+    "vee-validate": "^2.0.0-beta.25",
     "vue": "^2.1.0",
     "vue-head": "^2.0.10",
+    "vue-inputmask": "^0.1.2",
     "vue-moment": "^2.0.2",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1",
