--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mini-toastr": "^0.6.5",
     "moment": "^2.17.1",
     "pug": "^2.0.0-beta6",
+    "serviceworker-webpack-plugin": "^0.2.3",
     "v-mask": "^1.0.4",
     "vee-validate": "^2.0.0-beta.25",
     "vue": "^2.1.0",
