short name manifest update

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Escoteiros de Minas Gerais",
-  "short_name": "Escot. MG",
+  "short_name": "Escoteiros MG",
   "start_url": "/",
   "display": "standalone",
   "description": "Site oficial da Região de Minas Gerais dos Escoteiros do Brasil.",
