--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Escoteiros de Minas Gerais",
-  "short_name": "Escoteiros MG",
+  "short_name": "UEB MG",
   "start_url": "/",
   "display": "standalone",
   "description": "Site oficial da Região de Minas Gerais dos Escoteiros do Brasil.",
