--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mini-toastr": "^0.6.5",
     "moment": "^2.17.1",
     "pug": "^2.0.0-beta6",
+    "quill-delta-to-html": "^0.11.0",
     "serviceworker-webpack-plugin": "^0.2.3",
     "v-mask": "^1.0.4",
     "vee-validate": "^2.0.0-beta.25",
@@ -25,6 +26,7 @@
     "vue-analytics": "^3.2.0",
     "vue-bulma-pagination": "^1.1.4",
     "vue-bulma-switch": "^1.0.4",
+    "vue-carousel": "^0.18.0",
     "vue-head": "^2.0.10",
     "vue-inputmask": "^0.1.2",
     "vue-moment": "^2.0.2",
